fix border radius for projects on mobile view

--- a/src/styles/projects.css
+++ b/src/styles/projects.css
@@ -41,7 +41,7 @@
     width: var(--project-elem-width);
     /* transition: transform 1.2s forwards; */
     height: auto;
-    min-width: 400px;
+    min-width: 375px;
     object-fit: cover;
     object-position: center;
     aspect-ratio: 1 / 1.2;
@@ -69,6 +69,7 @@
         /* animation: carousel 10s linear infinite; */
         height: 50%;
         width: calc(3*100vw); /* change 3 to however many element inside your projects */
+        min-width: none;
         margin-top: 2%;
         transform: translate(50%, -50%);
         will-change: transform;
@@ -77,6 +78,7 @@
     .project_elem {
         position: relative;
         width: 100vw;
+        min-width: none;
         /* transition: transform 1.2s forwards; */
         height: auto;
         object-fit: cover;
@@ -100,6 +102,7 @@
     .carousel {
         height: auto;
         width: 100vw;
+        min-width: none;
         margin-top: 2%;
         transform: translate(50%, -50%);
         @apply flex flex-col gap-5 justify-center;
@@ -110,8 +113,10 @@
         width: 100vw;
         /* transition: transform 1.2s forwards; */
         height: auto;
+        min-width: none;
         object-fit: cover;
         object-position: center;
+        padding: 2%;
         aspect-ratio: 1 / 1.2;
         /* border-radius: 25px; */
         overflow: hidden;
@@ -121,8 +126,7 @@
         box-shadow: 0 0px 25px  rgba(4, 4, 4, 0.3);
         cursor: pointer;
         user-select: none;
-        border-radius: 25px;
-        outline: purple 3px solid;
+        border-radius: 50px;
     }
     
 }
